--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Hero Section -->
   <section class="h-screen flex flex-col justify-center items-center text-center px-4">
-    <h2 class="text-5xl font-extrabold mb-4">Hi, I’m <span class="text-blue-400">[Your Name]</span></h2>
+    <h2 class="text-5xl font-extrabold mb-4">Hi, I’m <span class="text-blue-400">Dzoni</span></h2>
     <p class="text-lg max-w-xl text-gray-300 mb-6">I’m a 16-year-old video editor, hardware tinkerer, and robotics enthusiast. I make the most of every tool I use to bring creative ideas to life.</p>
     <a href="#contact" class="px-6 py-3 bg-blue-500 hover:bg-blue-600 rounded-xl shadow-lg text-lg font-semibold transition">Hire Me</a>
   </section>
@@ -76,7 +76,8 @@
 
   <!-- Footer -->
   <footer class="py-6 text-center text-gray-500 text-sm">
-    © 2025 [Your Name]. All Rights Reserved.
+    © 2025 Dzoni. All Rights Reserved.
   </footer>
 </body>
 </html>
+
